--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,3 +1,15 @@
-<p>
-  home works!
-</p>
+<div class="landing">
+  <div class="dark-overlay landing-inner text-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1 class="display-3 mb-4">EvenToday</h1>
+          <p class="lead">Find your event now!</p>
+          <hr />
+          <a class="btn btn-primary mr-3" [routerLink]="['/cadastro']">Cadastro</a>
+          <a class="btn btn-primary" [routerLink]="['/consultas']">Consultas</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
