--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 class="page-header">Cadastro</h2>
 <form (submit)="onFormSubmit()">
   <div class="form-group">
@@ -16,4 +17,5 @@
 </form>
 <div class="container mt-3">
   <app-users></app-users>
+</div>
 </div>
