--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,20 +1,52 @@
 <div class="container">
 <h2 class="page-header">Cadastro</h2>
-<form (submit)="onFormSubmit()">
-  <div class="form-group">
-    <label>Nome</label>
-    <input type="text" class="form-control" [(ngModel)]="nome" name="nome">
-  </div>
-  <div class="form-group">
-    <label>Email</label>
-    <input type="text" class="form-control" [(ngModel)]="email" name="email">
-  </div>
-  <div class="form-group">
-    <label>Data de Nascimento</label>
-    <input type="date" class="form-control" [(ngModel)]="nascimento" name="nascimento">
-  </div>
-  <input type="submit" class="btn btn-primary" value="Cadastrar">
-</form>
+<p>
+  <button type="button" class="btn btn-outline-primary" (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed" aria-controls="collapseForm">
+    Abrir Formulario
+  </button>
+</p>
+<div id="collapseForm" [ngbCollapse]="isCollapsed">
+  <form (submit)="onFormSubmit()">
+    <div class="form-group">
+      <label>Nome</label>
+      <input type="text" class="form-control" [(ngModel)]="nome" name="nome">
+    </div>
+    <div class="form-group">
+      <label>Email</label>
+      <input type="text" class="form-control" [(ngModel)]="email" name="email">
+    </div>
+    <div class="form-group">
+      <label>Data de Nascimento</label>
+      <input type="date" class="form-control" [(ngModel)]="nascimento" name="nascimento">
+    </div>
+    <div class="form-group">
+      <label>Logradouro</label>
+      <input type="text" class="form-control" [(ngModel)]="logradouro" name="logradouro">
+    </div>
+    <div class="form-group">
+      <label>CEP</label>
+      <input type="text" class="form-control" [(ngModel)]="cep" name="cep">
+    </div>
+    <div class="form-group">
+      <label>Bairro</label>
+      <input type="text" class="form-control" [(ngModel)]="bairro" name="bairro">
+    </div>
+    <div class="form-group">
+      <label>Cidade</label>
+      <input type="text" class="form-control" [(ngModel)]="cidade" name="cidade">
+    </div>
+    <div class="form-group">
+      <label>Estado</label>
+      <input type="text" class="form-control" [(ngModel)]="estado" name="estado">
+    </div>
+    <div class="form-group">
+      <label>País</label>
+      <input type="text" class="form-control" [(ngModel)]="pais" name="pais">
+    </div>
+    <input type="submit" class="btn btn-primary" value="Cadastrar">
+  </form>
+</div>
 <div class="container mt-3">
   <app-users></app-users>
 </div>
