--- a/angular-src/src/app/components/show-users/show-users.component.html
+++ b/angular-src/src/app/components/show-users/show-users.component.html
@@ -1,6 +1,6 @@
 <div class="card card-body py-5 bg-light border-dark" *ngIf="data">
   <div class="container" *ngIf="data.length > 0">
-    <h3>Usuário(s) encontrado(s) : </h3>
+    <h3>Usuários cadastrados: </h3>
     <div class="row">
       <div class="col-md-6 mb-3" *ngFor="let item of data">
         <div class="card">
@@ -8,6 +8,15 @@
             <h4 class="card-title">{{ item.nome }}</h4>
             <p class="card-text">Email: {{ item.email }}</p>
             <p class="card-text">Data de Nascimento: {{ item.data_nasc | date:'d MMMM, y'}}</p>
+            <p class="card-text">Logradouro: {{ item.logradouro }}</p>
+            <p class="card-text">CEP: {{ item.cep }}</p>
+            <p class="card-text">Bairro: {{ item.bairro }}</p>
+            <p class="card-text">Cidade: {{ item.cidade }}</p>
+            <p class="card-text">Estado: {{ item.estado }}</p>
+            <p class="card-text">Pais: {{ item.pais }}</p>
+            <button (click)="deleteUser(item)" type="button" class="btn btn-danger mr-1">
+              <i class="fa fa-remove"></i>
+            </button>
           </div>
         </div>
       </div>
