--- a/angular-src/src/app/components/users/users.component.html
+++ b/angular-src/src/app/components/users/users.component.html
@@ -8,6 +8,12 @@
             <h4 class="card-title">{{ item.nome }}</h4>
             <p class="card-text">Email: {{ item.email }}</p>
             <p class="card-text">Data de Nascimento: {{ item.data_nasc | date:'d MMMM, y'}}</p>
+            <p class="card-text">Logradouro: {{ item.logradouro }}</p>
+            <p class="card-text">CEP: {{ item.cep }}</p>
+            <p class="card-text">Bairro: {{ item.bairro }}</p>
+            <p class="card-text">Cidade: {{ item.cidade }}</p>
+            <p class="card-text">Estado: {{ item.estado }}</p>
+            <p class="card-text">Pais: {{ item.pais }}</p>
             <button (click)="deleteUser(item)" type="button" class="btn btn-danger mr-1">
               <i class="fa fa-remove"></i>
             </button>
