--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
       <label>Email</label>
-      <input type="text" class="form-control" [(ngModel)]="email" name="email">
+      <input type="email" class="form-control" [(ngModel)]="email" name="email">
     </div>
     <div class="form-group">
       <label>Data de Nascimento</label>
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
       <label>CEP</label>
-      <input type="text" class="form-control" [(ngModel)]="cep" name="cep">
+      <input type="text" class="form-control" [(ngModel)]="cep" name="cep" kzMask="99999-999">
     </div>
     <div class="form-group">
       <label>Bairro</label>
