--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -13,6 +13,10 @@
       <input type="text" class="form-control" [(ngModel)]="nome" name="nome">
     </div>
     <div class="form-group">
+      <label>Senha</label>
+      <input type="password" class="form-control" [(ngModel)]="senha" name="senha">
+    </div>
+    <div class="form-group">
       <label>Email</label>
       <input type="email" class="form-control" [(ngModel)]="email" name="email">
     </div>
